--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -559,19 +559,11 @@ table th {
   font-size: var(--font-size-4);
 }
 
-.developer-list {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1.5rem;
-}
-
 .developer {
   box-shadow: var(--shadow-6);
   border-radius: 6px;
-  width: 320px;
+  background-color: #ffffff;
+  padding-bottom: 3rem;
 }
 
 .editor-controls {
@@ -691,6 +683,14 @@ table th {
 }
 .developer-details li {
   margin-bottom: 0.125rem;
+}
+
+.developer-list {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
 }
 
 .query-filters {
@@ -833,26 +833,123 @@ table th {
   font-size: 12px;
 }
 
+.developer {
+  width: 360px;
+  margin: 0 auto;
+}
+
 .developer-footer {
   text-align: center;
-  margin-bottom: 3rem;
 }
 .developer-footer button {
   border-radius: 4px;
   padding: 0.65rem 1rem;
   border: none;
 }
-.developer-footer .full-stack-button {
+.developer-footer .full-stack-button, .developer-footer a.full-stack {
   background-color: #4d7c0f;
   color: #ecfccb;
 }
-.developer-footer .back-end-button {
+.developer-footer .back-end-button, .developer-footer a.back-end {
   background-color: #1d4ed8;
   color: #dbeafe;
 }
-.developer-footer .front-end-button {
+.developer-footer .front-end-button, .developer-footer a.front-end {
   background-color: #b91c1c;
   color: #fee2e2;
+}
+
+.developer {
+  width: 360px;
+  margin: 0 auto;
+}
+
+.update-developer label {
+  font-size: 1rem;
+  font-weight: 600;
+}
+.update-developer input {
+  border: none;
+  border-radius: 3px;
+  font-size: 28px;
+  width: 50%;
+  background-color: #84cc16;
+  color: #ecfccb;
+  box-shadow: 0 0 2px 1px #4d7c0f;
+  text-align: center;
+}
+
+.edit-developer-details {
+  font-size: 14px;
+  width: 80%;
+  margin: 2rem auto 3rem;
+  display: flex;
+  flex-direction: column;
+}
+.edit-developer-details input {
+  margin-left: 0.5rem;
+  text-align: center;
+  font-size: 14px;
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  color: var(--gray-7);
+  border-bottom: 1px solid gray;
+  border-radius: 0;
+  padding-left: 0.25rem;
+  padding-bottom: 0;
+}
+
+input.status {
+  width: 30px;
+}
+
+input.phone-number {
+  width: 124px;
+}
+
+input.years-experience {
+  width: 24px;
+}
+
+.edit-name {
+  display: flex;
+  flex: 1;
+  gap: 1rem;
+  padding: 0.5rem;
+}
+
+.edit-speciality input {
+  font-size: 1rem;
+}
+
+.edit-developer-id {
+  background-color: #4d7c0f;
+  width: 40%;
+  margin: 0.5rem auto 0;
+  padding: 0.125rem;
+  border-radius: 3px;
+}
+.edit-developer-id input {
+  font-size: 14px;
+  background-color: transparent;
+}
+
+.developer footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.developer footer button {
+  padding: 0.5rem 2rem;
+  width: 60%;
+}
+.developer footer a {
+  border-radius: 4px;
+  padding: 0.65rem 1rem;
+  border: none;
+  width: 60%;
 }
 
 /*# sourceMappingURL=index.css.map */
