--- a/src/sass/pages/_delete.scss
+++ b/src/sass/pages/_delete.scss
@@ -1,22 +1,28 @@
  
 
+    .developer{
+        width: 360px;
+        margin: 0 auto;
+    }
+    
     .developer-footer {
         text-align: center;
-        margin-bottom: 3rem;
+  
        button{
         border-radius: 4px;
         padding:0.65rem 1rem;
         border:none;
+
        }
-        .full-stack-button{
+        .full-stack-button, a.full-stack{
             background-color: #4d7c0f; 
             color:#ecfccb;
         }
-        .back-end-button{
+        .back-end-button, a.back-end{
             background-color: #1d4ed8;
             color: #dbeafe;
         }
-        .front-end-button{
+        .front-end-button, a.front-end{
             background-color: #b91c1c;
             color: #fee2e2;
         }
