--- a/src/sass/pages/_delete.scss
+++ b/src/sass/pages/_delete.scss
@@ -1,7 +1,7 @@
  
 
-    .developer{
-        width: 360px;
+    aside.developer-delete{
+        width:380px;
         margin: 0 auto;
     }
     
